--- a/mcp/src/main/resources/application.properties
+++ b/mcp/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.ai.mcp.server.version=0.0.1
 spring.ai.mcp.server.instructions=This reactive server provides weather information tools and resources
 
 # Server type (SYNC/ASYNC)
-spring.ai.mcp.server.type=ASYNC
+spring.ai.mcp.server.type=SYNC
 
 # Transport configuration
 spring.ai.mcp.server.stdio=false
