fix: make it async
This has the benefit of being able to handle multiple requests per
thread, reducing the risk of draining thread pools.

--- a/mcp/src/main/resources/application.properties
+++ b/mcp/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.ai.mcp.server.name=my-weather-server
 spring.ai.mcp.server.version=0.0.1
 spring.ai.mcp.server.instructions=This reactive server provides weather information tools and resources
 # Server type (SYNC/ASYNC)
-spring.ai.mcp.server.type=SYNC
+spring.ai.mcp.server.type=ASYNC
 # Transport configuration
 spring.ai.mcp.server.stdio=false
 spring.ai.mcp.server.sse-message-endpoint=/mcp/message
