--- a/mcp/src/main/resources/application.properties
+++ b/mcp/src/main/resources/application.properties
@@ -26,4 +26,4 @@ logging.file.name=./target/starter-webflux-server.log
 spring.ai.mcp.server.capabilities.tool=true
 spring.ai.mcp.server.capabilities.resource=true
 spring.ai.mcp.server.capabilities.prompt=true
-spring.ai.mcp.server.capabilities.completion=true
+spring.ai.mcp.server.capabilities.completion=false
